# RiemannFM

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXP_PLAN.md  LICENSE  Makefile  PLAN.md  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: git-project-mgmt.md
.claude/skills/git-project-mgmt/: SKILL.md
.claude/skills/git-project-mgmt/references/: workflows.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  experiment.yml  feat.yml
.github/workflows/: ci.yml
configs/: config.yaml
configs/ablation/: full.yaml  no_a_r.yaml  no_ath.yaml  no_c.yaml  no_cross.yaml  no_d_ve.yaml  no_d_vr.yaml  no_e_r.yaml  no_e_v.yaml  no_edge_self.yaml  no_geok.yaml  no_mrope.yaml  no_mrope_geok.yaml  no_text_cond.yaml
configs/accelerator/: auto.yaml  cpu.yaml  ddp.yaml  gpu.yaml  mps.yaml
configs/data/: codex_l.yaml  fb15k237.yaml  fb15k_237.yaml  wiki27k.yaml  wikidata_5m.yaml  wikidata_5m_mini.yaml  wn18rr.yaml  yago3_10.yaml  zinc.yaml
configs/download/: default.yaml
configs/embedding/: nomic.yaml  none.yaml  qwen3.yaml  sbert.yaml  xlm_roberta.yaml
configs/experiment/: ablation_architecture.yaml  ablation_efficiency.yaml  ablation_loss.yaml  ablation_manifold.yaml  gad.yaml  kgc_codex_l.yaml  kgc_fb15k237.yaml  kgc_wiki27k.yaml  kgc_wiki5m.yaml  kgc_wn18rr.yaml  kgc_yago3_10.yaml  pretrain_search.yaml  pretrain_search_base.yaml  pretrain_wiki5m.yaml  scaling.yaml  smoke_test.yaml  t2g.yaml  validation_run.yaml  validation_run_geom_norm.yaml  validation_run_geom_norm_barlow.yaml  validation_run_geom_norm_bn.yaml  validation_run_geom_norm_bn_barlow.yaml
configs/flow/: continuous_only.yaml  discrete_only.yaml  joint.yaml
configs/logger/: csv.yaml  default.yaml  wandb.yaml
configs/manifold/: e_only.yaml  fixed_curvature.yaml  h_e.yaml  h_only.yaml  product_h_s_e.yaml  s_e.yaml  s_only.yaml
configs/model/: base.yaml  large.yaml  rieformer_base.yaml  rieformer_large.yaml  rieformer_small.yaml  small.yaml
configs/paths/: default.yaml
configs/preprocess/: default.yaml
configs/sweep/: gad.yaml  kgc.yaml  pretrain.yaml  pretrain_base.yaml  t2g.yaml
configs/task/: gad.yaml  kgc_lp.yaml  kgc_rp.yaml  t2g.yaml
configs/text_encoder/: none.yaml  xlm_roberta.yaml
configs/training/: finetune.yaml  pretrain.yaml
docs/: cli.md  data.md  downstream_tasks.md  experiment.md  experiments.md  finetune_plan.md  intro_CN.md  math_CN.v0.1.1.md  math_CN.v0.1.2.md  math_CN.v1.0.1.md  math_EN.v0.1.1.md  model.md  symbols.md
riedfm/: __init__.py
riedfm/configs/data/: fb15k237.yaml  zinc.yaml
riedfm/configs/eval/: default.yaml
riedfm/configs/model/: red_former_large.yaml
riedfm/configs/training/: pretrain.yaml
riedfm/data/: __init__.py  collator.py  graph_data.py  kg_datasets.py  subgraph_sampler.py  text_features.py  wikidata_dataset.py
riedfm/flow/: __init__.py  continuous_flow.py  discrete_flow.py
riedfm/layers/: edge_attention.py
riedfm/losses/: combined_loss.py  contrastive_loss.py
riedfm/manifolds/: hyperbolic.py  product.py
riedfm/models/: __init__.py  red_former_block.py
riedfm/utils/: __init__.py  checkpoint.py  graph_metrics.py  metrics.py  riemannian_optim.py
scripts/: _common.sh  diagnose_align_mask.py  download.sh  evaluate.py  evaluate.sh  finetune.py  finetune.sh  generate.py  generate.sh  prepare_data.py  preprocess.sh  pretrain.py  pretrain.sh
src/riedfm/cli/: __init__.py  evaluate.py  finetune.py  generate.py  preprocess.py  pretrain.py
src/riedfm/configs/: config.yaml
src/riedfm/configs/data/: wikidata_5m.yaml  wn18rr.yaml
src/riedfm/data/: __init__.py  collator.py  graph_data.py  kg_datasets.py  molecular_datasets.py  subgraph_sampler.py  text_features.py  wikidata_dataset.py
src/riedfm/flow/: __init__.py  continuous_flow.py  discrete_flow.py  joint_flow.py  noise.py  ode_solver.py
src/riedfm/layers/: __init__.py  ath_norm.py  dual_stream_interaction.py  edge_attention.py  geodesic_attention.py  manifold_rope.py  text_cross_attention.py  vector_field_head.py
src/riedfm/losses/: __init__.py  combined_loss.py  contrastive_loss.py  flow_matching_loss.py
src/riedfm/manifolds/: __init__.py  euclidean.py  hyperbolic.py  product.py  spherical.py
src/riedfm/models/: __init__.py  red_former.py  red_former_block.py  riedfm_g.py  text_encoder.py
src/riedfm/utils/: distributed.py  logging.py  manifold_utils.py  metrics.py  scheduler.py  virtual_nodes.py
src/riemannfm/: __init__.py
src/riemannfm/cli/: __init__.py  download.py  evaluate.py  finetune.py  generate.py  preprocess.py  pretrain.py
src/riemannfm/data/: __init__.py  collator.py  datamodule.py  download.py  embed.py  graph.py  graph_data.py  kg_datasets.py  molecular_datasets.py  preprocess.py  sampler.py  subgraph_sampler.py  text_features.py  validate.py  wikidata_dataset.py
src/riemannfm/flow/: __init__.py  continuous_flow.py  discrete_flow.py  joint_flow.py  noise.py  ode_solver.py
src/riemannfm/losses/: __init__.py  combined_loss.py  contrastive_loss.py  flow_matching_loss.py  relation_align.py
src/riemannfm/manifolds/: __init__.py  base.py  euclidean.py  lorentz.py  product.py  spherical.py  utils.py
src/riemannfm/models/: __init__.py  dual_stream.py  finetune_module.py  heads.py  input_encoding.py  lightning_module.py  normalization.py  positional.py  pretrain_heads.py  rieformer.py  rieformer_block.py  riemannfm.py  text_condition.py  text_encoder.py
src/riemannfm/optim/: __init__.py  riemannian.py  scheduler.py
src/riemannfm/tasks/: __init__.py  kgc.py  kgc_lp.py  metrics.py
src/riemannfm/utils/: __init__.py  checkpoint.py  logging.py  virtual_nodes.py
tests/: conftest.py  test_configs.py  test_data.py  test_datamodule.py  test_discrete_flow.py  test_download.py  test_embed.py  test_flow.py  test_kg_pipeline.py  test_kgc.py  test_layers.py  test_losses.py  test_manifolds.py  test_modality_masking.py  test_model.py  test_models.py  test_optim.py  test_package.py  test_per_node_time.py  test_preprocess.py  test_pretrain_heads.py  test_validate.py
(+23 files in other folders)
