[project]
name = "riemannfm"
version = "0.1.0"
description = "RiemannFM: Geometry- and Text-Aware Flow Matching on Product Manifolds with Joint Continuous-Discrete Dynamics for Knowledge Graph Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Yongli Mou"},
]
dependencies = [
    "torch>=2.6.0",
    "torch_geometric>=2.6.0",
    "geoopt>=0.5.1",
    "torchdiffeq>=0.2.5",
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "omegaconf>=2.3.0",
    "optuna",
    "wandb>=0.19.0",
    "einops>=0.8.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.6.0",
    "networkx>=3.4",
    "pandas>=2.2.0",
    "tqdm>=4.67.0",
    "rich>=13.9.0",
    "nltk>=3.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "lightning>=2.4.0",
    "gdown>=5.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
riemannfm-pretrain = "riemannfm.cli.pretrain:main"
riemannfm-finetune = "riemannfm.cli.finetune:main"
riemannfm-evaluate = "riemannfm.cli.evaluate:main"
riemannfm-generate = "riemannfm.cli.generate:main"
riemannfm-preprocess = "riemannfm.cli.preprocess:main"
riemannfm-download = "riemannfm.cli.download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riemannfm"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip-without-strict (too noisy for torch code)
    "N802",   # function name should be lowercase (math convention: test_L_X, apply_FiLM)
    "N803",   # argument name should be lowercase (math convention: E_t, C_V)
    "N806",   # variable in function should be lowercase (math convention: N, B, K, D)
    "N812",   # lowercase imported as non-lowercase (common in torch: F = nn.functional)
    "RUF001", # ambiguous unicode in strings (math notation: ·, ‖, ⊙)
    "RUF002", # ambiguous unicode in docstrings (math notation: α, β, μ, κ, ε)
    "RUF003", # ambiguous unicode in comments (math notation)
]

[tool.ruff.lint.isort]
known-first-party = ["riemannfm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
